Add html elements

--- a/index.html
+++ b/index.html
@@ -9,9 +9,56 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
-        <div class="header"></div>
-        <div class="main-content"></div>
+        <div class="sidebar">
+            <div class="dashboard"></div>
+            <div class="sidebar-group-one">
+                <div class="home"></div>
+                <div class="profile"></div>
+                <div class="messages"></div>
+                <div class="history"></div>
+                <div class="tasks"></div>
+                <div class="communities"></div>
+            </div>
+            <div class="sidebar-group-two">
+                <div class="settings"></div>
+                <div class="support"></div>
+                <div class="privacy"></div>
+        </div>
+        <div class="header">
+            <div class="search">
+                <img src="" alt="" class="search-icon">
+                <input type="text" class="search">
+            </div>
+            <div class="small-profile-area">
+                <img src="" alt="" class="notification-icon">
+                <div class="small-profile-picture"></div>
+                <div class="small-name"></div>
+            </div>
+            <div class="large-profile-area">
+                <div class="large-profile-picture"></div>
+                <p class="greeting"></p>
+                <h1 class="large-name"></h1>
+            </div>
+            <div class="buttons">
+                <button class="new"></button>
+                <button class="upload"></button>
+                <button class="share"></button>
+            </div>
+        </div>
+    
+        <div class="main-content">
+            <div class="projects-label"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="announcement-label"></div>
+            <div class="announcement-card"></div>
+            <div class="trending-label"></div>
+            <div class="trending-card"></div>
+        </div>
     </div>
 </body>
 </html>
