Add icons/text to header, side, & main-content

--- a/index.html
+++ b/index.html
@@ -10,28 +10,59 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="dashboard"></div>
+            <div class="dashboard">
+                    <img src="./icons/dashboard_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Dashboard</h2>
+            </div>
             <div class="sidebar-group-one">
-                <div class="home"></div>
-                <div class="profile"></div>
-                <div class="messages"></div>
-                <div class="history"></div>
-                <div class="tasks"></div>
-                <div class="communities"></div>
+                <div class="home">
+                    <img src="./icons/home_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Home</h2>
+                </div>
+                <div class="profile">
+                    <img src="./icons/account_circle_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Profile</h2>
+                </div>
+                <div class="messages">
+                    <img src="./icons/mode_comment_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Messages</h2>
+                </div>
+                <div class="history">
+                    <img src="./icons/history_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>History</h2>
+                </div>
+                <div class="tasks">
+                    <img src="./icons/file_copy_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Tasks</h2>
+                </div>
+                <div class="communities">
+                    <img src="./icons/people_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Communities</h2>
+                </div>
             </div>
             <div class="sidebar-group-two">
-                <div class="settings"></div>
-                <div class="support"></div>
-                <div class="privacy"></div>
+                <div class="settings">
+                    <img src="./icons/settings_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Settings</h2>
+                </div>
+                <div class="support">
+                    <img src="./icons/help_center_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Support</h2>
+                </div>
+                <div class="privacy">
+                    <img src="./icons/verified_user_black_24dp.svg" alt="" class="side-bar-icon">
+                    <h2>Privacy</h2>
+            </div>
+        </div>
         </div>
         <div class="header">
             <div class="search">
-                <img src="" alt="" class="search-icon">
+                <img src="./icons/search_black_24dp.svg" alt="" class="search-icon">
                 <input type="text" class="search">
             </div>
             <div class="small-profile-area">
-                <img src="" alt="" class="notification-icon">
-                <div class="small-profile-picture"></div>
+                <img src="./icons/notifications_active_black_24dp.svg" alt="" class="notification-icon">
+                <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="small profile picture in the header" class="small-profile-picture">
                 <div class="small-name"></div>
             </div>
             <div class="large-profile-area">
@@ -40,20 +71,57 @@
                 <h1 class="large-name"></h1>
             </div>
             <div class="buttons">
-                <button class="new"></button>
-                <button class="upload"></button>
-                <button class="share"></button>
+                <button class="new">New</button>
+                <button class="upload">Upload</button>
+                <button class="share">Share</button>
             </div>
         </div>
-    
+
         <div class="main-content">
             <div class="projects-label"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+            <div class="project-card">
+                <h1>Title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            </div>
+
             <div class="announcement-label"></div>
             <div class="announcement-card"></div>
             <div class="trending-label"></div>
