add all content, images, and icons

--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="dashboard">
+            <div class="dashboard sidebar-item">
                     <img src="./icons/dashboard_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Dashboard</h2>
             </div>
             <div class="sidebar-group-one">
-                <div class="home">
+                <div class="home sidebar-item">
                     <img src="./icons/home_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Home</h2>
                 </div>
-                <div class="profile">
+                <div class="profile sidebar-item">
                     <img src="./icons/account_circle_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Profile</h2>
                 </div>
-                <div class="messages">
+                <div class="messages sidebar-item">
                     <img src="./icons/mode_comment_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Messages</h2>
                 </div>
-                <div class="history">
+                <div class="history sidebar-item">
                     <img src="./icons/history_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>History</h2>
                 </div>
-                <div class="tasks">
+                <div class="tasks sidebar-item">
                     <img src="./icons/file_copy_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Tasks</h2>
                 </div>
-                <div class="communities">
+                <div class="communities sidebar-item">
                     <img src="./icons/people_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Communities</h2>
                 </div>
             </div>
             <div class="sidebar-group-two">
-                <div class="settings">
+                <div class="settings sidebar-item">
                     <img src="./icons/settings_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Settings</h2>
                 </div>
-                <div class="support">
+                <div class="support sidebar-item">
                     <img src="./icons/help_center_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Support</h2>
                 </div>
-                <div class="privacy">
+                <div class="privacy sidebar-item">
                     <img src="./icons/verified_user_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Privacy</h2>
             </div>
@@ -66,9 +66,9 @@
                 <div class="small-name"></div>
             </div>
             <div class="large-profile-area">
-                <div class="large-profile-picture"></div>
-                <p class="greeting"></p>
-                <h1 class="large-name"></h1>
+                <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" class="large-profile-picture">
+                <p class="greeting">Hi there,</p>
+                <h1 class="large-name">Morgan Oakley (@morgan)</h1>
             </div>
             <div class="buttons">
                 <button class="new">New</button>
@@ -78,54 +78,84 @@
         </div>
 
         <div class="main-content">
-            <div class="projects-label"></div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
-            </div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
-            </div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
-            </div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
-            </div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
-            </div>
-            <div class="project-card">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+            <div class="projects-label">Your Projects</div>
+            <div class="project-cards">
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
+                <div class="project-card">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                </div>
             </div>
 
-            <div class="announcement-label"></div>
-            <div class="announcement-card"></div>
-            <div class="trending-label"></div>
-            <div class="trending-card"></div>
+            <div class="main-content-right-side">
+                <div class="announcements">
+                    <div class="announcement-label">Announcements</div>
+                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
+                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
+                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
+                </div>
+                <div class="trending">
+                    <div class="trending-label">Trending</div>
+                    <div class="trending-card">
+                        <img src="./images/luis-villasmil-6qf1uljGpU4-unsplash.jpg" alt="">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="">
+                        <h3>@morgan</h3>
+                        <p>Super Cool Project</p>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                        <h3>@kendall</h3>
+                        <p>Life Changing App</p>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/nicolas-horn-MTZTGvDsHFY-unsplash.jpg" alt="">
+                        <h3>@alex</h3>
+                        <p>No Traffic Maker</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
