--- a/index.html
+++ b/index.html
@@ -56,24 +56,28 @@
         </div>
         </div>
         <div class="header">
-            <div class="search">
-                <img src="./icons/search_black_24dp.svg" alt="" class="search-icon">
-                <input type="text" class="search">
+            <div class="header-top-row">
+                    <div class="left-side">
+                        <img src="./icons/search_black_24dp.svg" alt="" class="search-icon">
+                        <input type="text" class="search">
+                    </div>
+                    <div class="right-side">
+                        <img src="./icons/notifications_active_black_24dp.svg" alt="" class="notification-icon">
+                        <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="small profile picture in the header" class="small-profile-picture">
+                        <h2 class="small-name">Morgan Oakley</h2>
+                    </div>
             </div>
-            <div class="small-profile-area">
-                <img src="./icons/notifications_active_black_24dp.svg" alt="" class="notification-icon">
-                <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="small profile picture in the header" class="small-profile-picture">
-                <div class="small-name"></div>
-            </div>
-            <div class="large-profile-area">
-                <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" class="large-profile-picture">
-                <p class="greeting">Hi there,</p>
-                <h1 class="large-name">Morgan Oakley (@morgan)</h1>
-            </div>
-            <div class="buttons">
-                <button class="new">New</button>
-                <button class="upload">Upload</button>
-                <button class="share">Share</button>
+            <div class="header-bottom-row">
+                    <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" class="large-profile-picture">
+                    <div class="intro">
+                        <p class="greeting">Hi there,</p>
+                        <h1 class="large-name">Morgan Oakley (@morgan)</h1>
+                    </div>
+                <div class="buttons">
+                    <button class="new">New</button>
+                    <button class="upload">Upload</button>
+                    <button class="share">Share</button>
+                </div>
             </div>
         </div>
 
