Add style and flex to header

--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
                     </div>
             </div>
             <div class="header-bottom-row">
-                    <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" class="large-profile-picture">
-                    <div class="intro">
-                        <p class="greeting">Hi there,</p>
-                        <h1 class="large-name">Morgan Oakley (@morgan)</h1>
+                    <div class="left-side">
+                        <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" class="large-profile-picture">
+                        <div class="intro">
+                            <p class="greeting">Hi there,</p>
+                            <h1 class="large-name">Morgan Oakley (@morgan)</h1>
+                        </div>
                     </div>
                 <div class="buttons">
                     <button class="new">New</button>
