add padding, flex, and borders to main content

--- a/index.html
+++ b/index.html
@@ -89,50 +89,62 @@
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
                 <div class="project-card">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
-                    <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
-                    <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
-                    <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    <div class="icons">
+                        <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
+                        <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
+                        <img src="./icons/share_black_24dp.svg" alt="" class="share-icon">
+                    </div>
                 </div>
             </div>
-
+                
+            <div class="announcement-label">Announcements</div>
             <div class="main-content-right-side">
                 <div class="announcements">
-                    <div class="announcement-label">Announcements</div>
                     <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
                     <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
                     <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
@@ -141,23 +153,31 @@
                     <div class="trending-label">Trending</div>
                     <div class="trending-card">
                         <img src="./images/luis-villasmil-6qf1uljGpU4-unsplash.jpg" alt="">
-                        <h3>@tegan</h3>
-                        <p>World Peace Builder</p>
+                        <div class="text">
+                            <h3>@tegan</h3>
+                            <p>World Peace Builder</p>
+                        </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="">
-                        <h3>@morgan</h3>
-                        <p>Super Cool Project</p>
+                        <div class="text">
+                            <h3>@morgan</h3>
+                            <p>Super Cool Project</p>
+                        </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
-                        <h3>@kendall</h3>
-                        <p>Life Changing App</p>
+                        <div class="text">
+                            <h3>@kendall</h3>
+                            <p>Life Changing App</p>
+                        </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/nicolas-horn-MTZTGvDsHFY-unsplash.jpg" alt="">
-                        <h3>@alex</h3>
-                        <p>No Traffic Maker</p>
+                        <div class="text">
+                            <h3>@alex</h3>
+                            <p>No Traffic Maker</p>
+                        </div>
                     </div>
                     </div>
                 </div>
