finalize layout and grids

--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
             <div class="projects-label">Your Projects</div>
             <div class="project-cards">
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -96,8 +99,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -105,8 +111,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -114,8 +123,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -123,8 +135,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -132,8 +147,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    <div class="yellow-bar"></div>
+                    <div class="text">
+                        <h1>Title</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi aliquid officiis possimus! Cum, voluptates ut!</p>
+                    </div>
                     <div class="icons">
                         <img src="./icons/star_border_black_24dp.svg" alt="" class="favorite-icon">
                         <img src="./icons/visibility_black_24dp.svg" alt="" class="eye-icon">
@@ -145,37 +163,46 @@
             <div class="announcement-label">Announcements</div>
             <div class="main-content-right-side">
                 <div class="announcements">
-                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
-                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
-                    <div class="announcement-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</div>
+                    <div class="announcement-card">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</p>
+                    </div>
+                    <div class="announcement-card">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</p>
+                    </div>
+                    <div class="announcement-card">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui, odio nam. Perferendis in quibusdam ab.</p>
+                    </div>
                 </div>
+                <div class="trending-label">Trending</div>
                 <div class="trending">
-                    <div class="trending-label">Trending</div>
                     <div class="trending-card">
                         <img src="./images/luis-villasmil-6qf1uljGpU4-unsplash.jpg" alt="">
                         <div class="text">
-                            <h3>@tegan</h3>
+                            <p>@tegan</p>
                             <p>World Peace Builder</p>
                         </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/jake-nackos-IF9TK5Uy-KI-unsplash.jpg" alt="">
                         <div class="text">
-                            <h3>@morgan</h3>
+                            <p>@morgan</p>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
                         <div class="text">
-                            <h3>@kendall</h3>
+                            <p>@kendall</p>
                             <p>Life Changing App</p>
                         </div>
                     </div>
                     <div class="trending-card">
                         <img src="./images/nicolas-horn-MTZTGvDsHFY-unsplash.jpg" alt="">
                         <div class="text">
-                            <h3>@alex</h3>
+                            <p>@alex</p>
                             <p>No Traffic Maker</p>
                         </div>
                     </div>
