fix sidebar dashboard gap & announcement card gap

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="dashboard sidebar-item">
+            <div id="dashboard" class="dashboard sidebar-item">
                     <img src="./icons/dashboard_black_24dp.svg" alt="" class="side-bar-icon">
                     <h2>Dashboard</h2>
             </div>
